# PicoNTCThermistor

./: CMakeLists.txt  README.md  pico_ntc_thermistor.cpp
include/: pico_ntc_thermistor.h
